# IoT_EnvMonitorSys_Basic_and_Tests

./: .gitignore  CMakeLists.txt  README.md  precise_diagnosis.py  test_iot_integration.py
.github/workflows/: README_CI.md  ci.yml
IoT_EnvMonitorSys_Basic/: CMakeLists.txt
IoT_EnvMonitorSys_Basic/cloud-services/ai-analyzer/: main.py  real_ai_analyzer.py  requirements-ai.txt
IoT_EnvMonitorSys_Basic/cloud-services/data-collector/: main.py  mqtt_receiver.py  sensor_data.db  sensor_database.py  simple_collector.py
IoT_EnvMonitorSys_Basic/cloud-services/shared/: database.py
IoT_EnvMonitorSys_Basic/cloud_services/: README_AI.md  requirements.txt
IoT_EnvMonitorSys_Basic/cloud_services/ai_analyzer/: main.py  real_ai_analyzer.py
IoT_EnvMonitorSys_Basic/cloud_services/ai_analyzer/ai_models/: cluster_model.pkl  environment_model.pkl
IoT_EnvMonitorSys_Basic/cloud_services/data_collector/: mqtt_receiver.py  path_debug.py
IoT_EnvMonitorSys_Basic/cloud_services/shared/: c  database.py  sensor_data.db
IoT_EnvMonitorSys_Basic/firmware/: CMakeLists.txt  Makefile  README_FW.md
IoT_EnvMonitorSys_Basic/firmware/include/: common.h  config.h  env_monitor_export.h
IoT_EnvMonitorSys_Basic/firmware/src/: main.c  mqtt_client.c  mqtt_client.h  sensor_emulator.c  sensor_emulator.h
IoT_EnvMonitorSys_Basic/firmware/unit-tests/: test_runners.c
test-engine/tests/: test_cloud_services.py  test_complete_data_flow.py  test_integration.py  test_integration_fixed.py  test_sensor.py
test-engine/utils/: path_resolver.py
test_engine/: README_TEST.md  requirements.txt
test_engine/tests/: check_dll_functions.py  test_cloud_services.py  test_complete_data_flow.py  test_integration.py  test_sensor.py
test_engine/utils/: path_resolver.py
